# proxor

./: .gitignore  .gitmodules  .tmp_release_notes.md  CMakeLists.txt  CREDITS.md  README.md  build_and_deploy.bat  go.work  go.work.sum  nekoray_version.txt  proxor_version.txt
.github/workflows/: build-nekoray-cmake.yml  build-proxor-cmake.yml
assets/res/: proxor.css  proxor.qrc  qdarkstyle_overrides.qss
assets/res/vpn/: sing-box-vpn.json  vpn-run-root.sh
cmake/: nkr.cmake
cmake/windows/: windows.cmake
db/: ConfigBuilder.cpp  ConfigBuilder.hpp  Database.cpp  Database.hpp  Group.hpp  ProfileFilter.cpp
db/traffic/: TrafficLooper.hpp
docs/: Build_Core.md  Build_Linux.md  Build_Windows.md  RunFlags.md  Run_Linux.md  readme.md
fmt/: AbstractBean.cpp  AbstractBean.hpp  Bean2CoreObj_box.cpp  Bean2Link.cpp  ChainBean.hpp  CustomBean.hpp  Link2Bean.cpp  NaiveBean.hpp  ShadowSocksBean.hpp  SocksHttpBean.hpp  VMessBean.hpp
go/: .gitignore
go/cmd/nekobox_core/: core_box.go  go.mod  grpc_box.go  main.go
go/cmd/nekobox_core/boxmain/: compat.go
go/cmd/proxor_core/: core_box.go  go.mod  go.sum  grpc_box.go  grpc_box_validate_test.go  main.go
go/cmd/proxor_core/boxmain/: compat.go  compat_test.go
go/cmd/updater/: go.mod  go.sum  launcher_linux.go  main.go  updater.go
go/grpc_server/: fulltest.go  go.mod  go.sum  grpc.go  grpc_integration_test.go  update.go  update_test.go
go/grpc_server/auth/: auth.go  auth_test.go
go/proxorlib/: README.md  go.mod
go/proxorlib/proxor_common/: common.go
go/proxorlib/proxor_log/: log.go
go/proxorlib/speedtest/: speedtest.go
libs/: build_deps_all.sh  build_go.sh  build_public_res.sh  deploy_windows64.sh  download_proxor_qtsdk_win.sh  env_deploy.sh  get_source.sh  get_source_env.sh  package_release.sh
main/: GuiUtils.hpp  HTTPRequestHelper.cpp  HTTPRequestHelper.hpp  NekoGui.cpp  NekoGui_DataStore.hpp  ProxorGui.cpp  ProxorGui.hpp  ProxorGui_DataStore.hpp  ProxorGui_Utils.cpp  ProxorGui_Utils.hpp  main.cpp
res/: neko.qrc  proxor.qrc
res/vpn/: sing-box-vpn.json
rpc/: gRPC.cpp  gRPC.h
scripts/: build_and_deploy_windows.ps1  build_and_deploy_windows.sh  build_windows.ps1  build_windows.sh  deploy_windows.ps1  deploy_windows.sh
src/db/: ConfigBuilder.cpp  Database.cpp  Database.hpp  Group.hpp  ProfileFilter.cpp  ProfileFilter.hpp  ProxyEntity.hpp
src/db/traffic/: TrafficData.hpp  TrafficLooper.cpp
src/fmt/: AbstractBean.cpp  AbstractBean.hpp  Bean2CoreObj_box.cpp  Bean2External.cpp  Bean2Link.cpp  Link2Bean.cpp  QUICBean.hpp  ShadowSocksBean.hpp  TrojanVLESSBean.hpp  V2RayStreamSettings.hpp
src/main/: Const.hpp  HTTPRequestHelper.cpp  ProxorGui.cpp  ProxorGui.hpp  ProxorGui_ConfigItem.hpp  ProxorGui_DataStore.hpp  ProxorGui_Utils.cpp  main.cpp  windows_runtime_launcher.cpp
src/rpc/: gRPC.cpp  gRPC.h
src/sub/: GroupUpdater.cpp  GroupUpdater.hpp
src/sys/: AutoRun.cpp  ExternalProcess.cpp  WifiMonitor.cpp  WifiMonitor.hpp
src/sys/windows/: ActiveNetworkType.cpp  ActiveNetworkType.h  MiniDump.cpp
src/ui/: Icon.cpp  Icon.hpp  ThemeManager.cpp  ThemeManager.hpp  dialog_basic_settings.cpp  dialog_basic_settings.h  dialog_basic_settings.ui  dialog_hotkey.h  dialog_manage_groups.cpp  dialog_manage_groups.h  dialog_manage_groups.ui  dialog_manage_routes.cpp  dialog_ssid_settings.cpp  dialog_ssid_settings.h  dialog_ssid_settings.ui  dialog_update_available.cpp  dialog_update_available.h  dialog_update_available.ui  dialog_update_progress.cpp  dialog_update_progress.h  dialog_vpn_settings.h  dialog_vpn_settings.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_grpc.cpp
src/ui/edit/: dialog_edit_group.cpp  dialog_edit_group.h  dialog_edit_group.ui  dialog_edit_profile.cpp  dialog_edit_profile.h  edit_chain.cpp  edit_chain.h  edit_custom.cpp  edit_custom.h  edit_naive.h  edit_quic.cpp  edit_shadowsocks.cpp  edit_shadowsocks.h  edit_socks_http.h
src/ui/model/: GroupListModel.cpp  GroupListModel.h  ProxyListModel.cpp  ProxyListModel.h
src/ui/widget/: GroupItem.cpp  ProxyItem.cpp  ProxyItem.ui  ProxyListView.cpp  ProxyListView.h
sub/: GroupUpdater.cpp  GroupUpdater.hpp
sys/: AutoRun.cpp  ExternalProcess.cpp  ExternalProcess.hpp
ui/: Icon.cpp  ThemeManager.cpp  ThemeManager.hpp  dialog_basic_settings.cpp  dialog_basic_settings.ui  dialog_hotkey.cpp  dialog_manage_groups.cpp  dialog_manage_routes.cpp  dialog_manage_routes.h  dialog_manage_routes.ui  dialog_vpn_settings.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_grpc.cpp
ui/edit/: dialog_edit_group.h  dialog_edit_profile.cpp  edit_naive.cpp  edit_quic.h  edit_shadowsocks.cpp  edit_socks_http.cpp  edit_trojan_vless.cpp  edit_trojan_vless.h  edit_vmess.cpp  edit_vmess.h  profile_editor.h
ui/widget/: GroupItem.cpp  GroupItem.h  ProxyItem.cpp  ProxyItem.h  ProxyItem.ui
